# advent

./: .cvsignore  .cvsignore~  .gitignore  AUTHORS  Advent.cc  Advent.hh  AdventObj.cc  AdventObj.hh  AdventObjSmob.cc  AdventObjSmob.hh  Background.cc  Background.hh  Coin.cc  Coin.hh  CollisionMap.cc  CollisionMap.hh  Dialog.cc  Dialog.cc~  Dialog.hh  Dialog.hh~  Font.cc  Font.hh  GuileAdventObj.cc  GuileAdventObj.hh  Guy.cc  Guy.cc~  Guy.hh  Guy.hh~  Inventory.cc  Inventory.hh  Makefile  Makefile.am  Makefile.in  Position.hh  README  README.md  Scenario.cc  Scenario.hh  ScenarioSmob.cc  ScenarioSmob.cc~  (+9 more)
.deps/: Advent.P  AdventObj.P  AdventObjSmob.P  Background.P  Coin.P  CollisionMap.P  Dialog.P  Font.P  GuileAdventObj.P  Guy.P  Inventory.P  Scenario.P  ScenarioSmob.P
CVS/: Entries  Repository  Root
advent/: CMakeLists.txt  Makefile  Makefile.am  SConstruct  advent-cosmos.in  advent-retriever.in  configure.ac  cosmos  guix.scm  retriever
advent/advent/: defobj.scm  dialog.scm  door.scm  engine.scm  for.scm  helper.scm  inventory.scm  object.scm  person.scm  scenario.scm  sequence.scm  simple.scm  state.scm
advent/doc/: Makefile.am
advent/doc/examples/: Makefile.am
advent/doc/examples/cosmos/: Makefile.am  cosmos  cosmos.scm  helper.scm  interface.scm  inventory.scm  test.scm
advent/doc/examples/cosmos/images/: resources.scr
advent/doc/examples/cosmos/scenarios/: cage.scm  farm.scm  floor.scm  park.scm  serverroom.scm  workplace.scm
advent/doc/examples/retriever/: Makefile.am  helper.scm  images  interface.scm  retriever.scm
advent/doc/examples/retriever/gateway/: gateway.scm
advent/src/: Makefile.am  SConscript  adv_hook.cxx  adv_hook.hxx  adv_hook_smob.cxx  adv_hook_smob.hxx  adv_obj.cxx  adv_obj.hxx  advent_main.cxx  advent_main.hxx  button_layer.cxx  button_layer.hxx  coin_layer.cxx  coin_layer.hxx  collideable.cxx  collideable.hxx  collideable_smob.cxx  collideable_smob.hxx  colmap.cxx  colmap.hxx  colmap_smob.cxx  colmap_smob.hxx  color.hxx  cosmos  cosmos.scm  debug.cxx  debug.hxx  delayed_adv_hook.cxx  delayed_adv_hook.hxx  delta_manager.hxx  display.cxx  display.hxx  display_view.cxx  display_view.hxx  drawable.cxx  drawable.hxx  drawable_adv_obj.cxx  drawable_adv_obj.hxx  drawable_display.cxx  drawable_display.hxx  (+82 more)
advent/src/boost/: Makefile.am  auto_ptr.hpp  config.hpp  dummy_ptr.hpp  smart_ptr.hpp  utility.hpp
advent/src/guile/: Makefile.am  commandline.scm  defobj.scm  dialog.scm  door.scm  festival.scm  for.scm  helper.scm  keymap.scm  object.scm  person.scm  scenario.scm
collision/: Makefile  collision.cpp  lines.cpp  tessellation.cpp
data/: advent.xml  resources.scr
data/CVS/: Entries  Repository
data/images/: .nautilus-metafile.xml  background.pcx  background_cmap.pcx  mogli.pcx  mogli_front.pcx
data/images/.xvpics/: mogli.pcx  mogli_front.pcx
data/images/CVS/: Entries  Repository
dirtyrectangles/: CMakeLists.txt  Makefile.am  README  TODO  advent.sh  autogen.sh
dirtyrectangles/src/: Makefile.am  advent.pkg  advent.scm  advent_main.cxx  advent_main.hxx  advobj.scm  callback_timeable.cxx  callback_timeable.hxx  clickable.hxx  clickable_group.cxx  clickable_group.hxx  clickable_manager.cxx  clickable_manager.hxx  depth_drawable.cxx  depth_drawable.hxx  depth_map.cxx  depth_map.hxx  detachable_clickable.cxx  detachable_clickable.hxx  detachable_drawable.cxx  detachable_drawable.hxx  drawable.cxx  drawable.hxx  drawable_clickable.cxx  drawable_clickable.hxx  drawable_group.cxx  drawable_group.hxx  drawable_manager.cxx  drawable_manager.hxx  font_drawable.cxx  font_drawable.hxx  graphic_context.cxx  graphic_context.hxx  gui.scm  lua_functor.cxx  lua_functor.hxx  lua_value.cxx  lua_value.hxx  luatest.cxx  luatest.lua  (+32 more)
guile/: adventure.scm  core  dialog.scm  objects.scm  pyramid-sbandara.plf  room.scm  scenario1.scm  scenario1.scm~  scenario2.scm  scenario3.scm  scenario3.scm~  scenario4.scm  scenario5.scm  syntax-ext.scm  syntax-ext.scm~
guile/CVS/: Entries  Repository
prototype/: .cvsignore  AUTHORS  AdvHook.cc  AdvHook.hh  Advent.cc  Advent.hh  AdventObj.cc  AdventObj.hh  AdventObjSmob.cc  AdventObjSmob.hh  Animation.cc  Animation.hh  BUGS  Background.cc  Background.hh  ClickManager.cc  ClickManager.hh  Clickable.hh  Coin.cc  Coin.hh  CollisionMap.cc  CollisionMap.hh  DeltaManager.hh  Dialog.cc  Dialog.hh  DialogManager.cc  DialogManager.hh  Drawable.cc  Drawable.hh  FadeOut.cc  FadeOut.hh  Font.cc  Font.hh  GuileAdventObj.cc  GuileAdventObj.hh  Guy.cc  Guy.hh  Interpreter.cc  Interpreter.hh  Inventory.cc  (+29 more)
prototype/data/: resources.scr
prototype/data/images/: .cvsignore
prototype/engine/: actions.scm  adventure.scm  animation.scm  classes.scm  dialog.scm  guy.scm  helper.scm  inventory.scm  keyboard.scm  knowledge.scm  namespace.scm  namespace2.scm  person.scm  scenario.scm  sequence.scm  stat.scm  syntax-ext.scm  test.scm
prototype/games/cosmos/: action-defaults.scm  cosmos.scm  persons.scm
prototype/games/cosmos/scenarios/: biodoor.scm  biosec.scm  cell.scm  cellar.scm  floor.scm  server-room.scm  workplace.scm
prototype/games/ladder/: action-defaults.scm  ladder.scm  scenario1.scm
prototype/games/lkw/: lkw.scm  scenario-lkw.scm
prototype/games/retriever/: console.scm  dialog.scm  dialog2.scm  dialog3.scm  objects.scm  scenario1-wannabe.scm  scenario1.scm  scenario10.scm  scenario11.scm  scenario12.scm  scenario2.scm  scenario3.scm  scenario4.scm  scenario5.scm  scenario6.scm  scenario7.scm  scenario8.scm  scenario9.scm  singleton.scm  test.scm  wannabe.scm
prototype/guile/: adventure.scm  dialog2.scm  helper.scm  objects.scm
src/: SConstruct  advent.scm  advent_main.cxx  advent_main.hxx  callback_timeable.hxx  clickable_group.hxx  clickable_manager.cxx  depth_drawable.hxx  detachable_clickable.cxx  drawable.cxx  drawable.hxx  drawable_clickable.hxx  drawable_manager.cxx  luaadvent.cxx  person_timeable.cxx  person_timeable.hxx  rect_clickable.hxx  rect_drawable.cxx  rect_drawable.hxx  resource_manager.cxx  scripting.cxx  timeable.hxx  view.hxx
