bindir=$(prefix)/games

bin_PROGRAMS = advent

advent_SOURCES = \
Advent.cc      \
Advent.hh         \
AdventObj.cc      \
AdventObj.hh \
AdventObjSmob.cc  \
AdventObjSmob.hh \
Animation.cc \
Animation.hh \
Background.cc \
Background.hh \
ClickManager.cc \
ClickManager.hh \
Clickable.hh \
Coin.cc \
Coin.hh  \
CollisionMap.cc \
CollisionMap.hh  \
Dialog.cc \
Dialog.hh \
DialogManager.cc \
DialogManager.hh \
Drawable.cc \
Drawable.hh \
Font.cc \
Font.hh \
GuileAdventObj.cc \
GuileAdventObj.hh \
Guy.cc \
Guy.hh \
Inventory.cc \
Inventory.hh \
Position.hh \
Scenario.cc \
Scenario.hh \
ScenarioSmob.cc \
ScenarioSmob.hh\
System.cc \
System.hh \
TimeManager.cc \
TimeManager.hh \
View.hh \
View.cc \
helper.cc \
helper.hh  \
Interpreter.cc \
Interpreter.hh

# SUBDIRS = guile data

EXTRA_DIST = guile/*.scm data/resources.scr \
             data/images/*.png data/images/*.jpg

# EOF #
