AC_INIT( Advent.cc )
AM_CONFIG_HEADER( config.h )

PACKAGE=advent

MAJOR_VERSION=0
MINOR_VERSION=0
PATCH_VERSION=1

VERSION=${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION}


AC_DEFINE_UNQUOTED(MAJOR_VERSION, $MAJOR_VERSION)
AC_DEFINE_UNQUOTED(MINOR_VERSION, $MINOR_VERSION)
AC_DEFINE_UNQUOTED(PATCH_VERSION, $PATCH_VERSION)
AC_DEFINE_UNQUOTED(VERSION_STRING, "${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION}")

AM_INIT_AUTOMAKE( $PACKAGE, $VERSION )

AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL


dnl Checking for libraries
AC_CHECK_LIB(qthreads, main)
AC_CHECK_LIB(guile, scm_boot_guile)

AC_CHECK_LIB( clanCore,   main,, [
	echo "ClanLib installed, but -lclanCore not found, run 'ldconfig' and try again,"
	echo "if that doesn't help have a look at the file config.log and look into"
	echo "the FAQ."
	exit
	])

AC_CHECK_LIB( clanJPEG,   main,, [
	echo "ClanLib is installed, but clanJPEG was not found. You probably"
	echo "forgot to compile clanJPEG, which is part of the ClanLib package"
	echo "or you need to run 'ldconfig'."
	echo "If you think you have everything correctly installed have a look at"
	echo "the file 'config.log' to see what went wrong"
	exit
	])

AC_CHECK_LIB( clanPNG,   main,, [
	echo "ClanLib is installed, but clanPNG was not found. You probably"
	echo "forgot to compile clanPNG, which is part of the ClanLib package"
	echo "or you need to run 'ldconfig'."
	echo "If you think you have everything correctly installed have a look at"
	echo "the file 'config.log' to see what went wrong"
	exit
	])

AC_OUTPUT( Makefile )
