pkgdatadir = $(datadir)/games/@PACKAGE@/doc/examples/cosmos

# find images/ -name "*.jpg" | grep -v .thumb | grep -v .xvpic | grep -v /old/  > /tmp/lst

cosmos_images = \
	images/workplace-room.jpg \
	images/farm.jpg \
	images/park.jpg \
	images/scenario_cage.jpg \
	images/floor.jpg \
	images/server-room.jpg \
	images/logo.jpg \
	images/arialfont.png \
	images/mogli_west.png \
	images/farm_barrel.png \
	images/amogli_west.png \
	images/scenario_cage_cmap.png \
	images/burningtrashcan.png \
	images/colmap.png \
	images/prof_west_walk2.png \
	images/amogli_front.png \
	images/farm_hay.png \
	images/calendar.png \
	images/prof_north.png \
	images/gc_over.png \
	images/prof_east.png \
	images/mogli_south.png \
	images/prof_west_anim.png \
	images/font.png \
	images/404.png \
	images/cursor_inactive.png \
	images/arialfont14_magenta.png \
	images/amogli_north.png \
	images/roboter_south.png \
	images/floor_cmap.png \
	images/cursor_glow.png \
	images/cursor.png \
	images/coin.png \
	images/arialfont14_blue.png \
	images/roboter_east.png \
	images/prof_east_anim.png \
	images/burningtrashcanout.png \
	images/door_cursor.png \
	images/button.png \
	images/calendar_burned_inv.png \
	images/gc.png \
	images/park_cmap.png \
	images/server-room_cmap.png \
	images/trashcan.png \
	images/park_house.png \
	images/arialfont14.png \
	images/mogli_east.png \
	images/scenario1.png \
	images/arialfont20.png \
	images/scenario2.png \
	images/prof_south.png \
	images/farm_cmap.png \
	images/person/prof1.png \
	images/amogli_east.png \
	images/prof_west_walk.png \
	images/prof_west.png \
	images/amogli_south.png \
	images/start.png \
	images/bottle_inv.png \
	images/cursor_inaktive.png \
	images/burningtrashcanout_inv.png \
	images/roboter_west.png \
	images/arialfont14_orange.png \
	images/mogli_north.png \
	images/bottle.png \
	images/exit.png \
	images/mogli.png \
	images/roboter_north.png

cosmos_code = \
	scenarios/serverroom.scm \
	scenarios/farm.scm \
	scenarios/workplace.scm \
	scenarios/cage.scm \
	scenarios/park.scm \
	scenarios/floor.scm \
	inventory.scm \
	helper.scm \
	test.scm \
	interface.scm \
	cosmos.scm

EXTRA_DIST = $(cosmos_code) $(cosmos_images)
nobase_pkgdata_DATA = $(EXTRA_DIST)

# EOF #